--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 body{
     margin:auto;
     width:70%;
+    font-family: 'Montserrat', sans-serif;
 }
 
 header{
@@ -20,6 +21,14 @@ li{
     padding-top:35px;
 }
 
+h2{
+    padding-top:10px;
+}
+
+.grey-color{
+    color: rgb(175, 172, 172);
+}
+
 #logo-page{
     height:60px;
     border:1px solid black;
@@ -31,16 +40,25 @@ li{
 .central-section{
     height: 450px;
     margin-top: 20px;
-    background-color: rgb(253, 234, 128);
+    border:1px solid black;
+    border-radius: 10px;
+}
+.img-central-section{
     background-image: url(../img/banner.jpg);
     background-size: cover;
     background-position: center;
+    box-shadow:inset 600px 450px rgba(0, 0, 0, .4);
 }
-
+.text-central-section{
+    width: 40%;
+    border:1px solid black;
+    margin:300px 30px 20px 30px;
+    color: white;
+}
 .section-container-floats{
     height:500px;
     margin-top: 20px;
-    background-color: rgb(61, 113, 255);
+    background-color: white;
 }
 
 .clear-fix::after{
@@ -51,6 +69,11 @@ li{
 
 .float-left{
     float: left;
+}
+.header-section-container-floats{
+    width:100%;
+    height: 60px;
+    background-color:white;
 }
 
 .lateral-column{
@@ -66,14 +89,36 @@ li{
     margin:10px;
 }
 
-.header-section-container-floats{
-    width:100%;
-    height: 10%;
-    background-color:rgb(129, 209, 247);;
-}
 
 .footer-container{
     height:75px;
-    margin-top:10px;
-    background-color: rgb(172, 0, 172);
+    margin-top:20px;
+    text-align: center;
+}
+
+#img-left-column{
+    height: 40%;
+    width: 100%;
+    border:1px solid red;
+    background-image: url(../img/img-1.jpg);
+    background-size:cover;
+    background-position:center;
+}
+
+#img-center-column{
+    height: 40%;
+    width: 100%;
+    border:1px solid red;
+    background-image: url(../img/banner-2.jpg);
+    background-size:cover;
+    background-position:center;
+}
+
+#img-right-column{
+    height: 40%;
+    width: 100%;
+    border:1px solid red;
+    background-image: url(../img/img-3.jpg);
+    background-size:cover;
+    background-position:center;
 }
