--- a/css/style.css
+++ b/css/style.css
@@ -12,26 +12,34 @@ body{
 
 header{
     height: 120px;
-    border:1px solid black;
+    margin:10px 0;
 }
 
 li{
     display: inline-block;
-    margin:0 5px;
-    padding-top:35px;
+    margin:0 5px 0 0 ;
+    padding-top:30px;
 }
 
 h2{
     padding-top:10px;
 }
 
-.grey-color{
-    color: rgb(175, 172, 172);
+h3{
+    margin:5px 0;
 }
 
-#logo-page{
+.grey-color-paragraph{
+    color: rgb(158, 155, 155);
+}
+
+a{
+    color:rgb(158, 155, 155);
+    text-decoration: none;
+}
+
+#logo-header{
     height:60px;
-    border:1px solid black;
     background-image: url(../img/logo.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -40,26 +48,22 @@ h2{
 .central-section{
     height: 450px;
     margin-top: 20px;
-    border:1px solid black;
     border-radius: 10px;
 }
 .img-central-section{
-    background-image: url(../img/banner.jpg);
+    background-image:
+    linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)),
+    url(../img/banner.jpg);
     background-size: cover;
     background-position: center;
-    box-shadow:inset 600px 450px rgba(0, 0, 0, .4);
 }
+
 .text-central-section{
-    width: 40%;
-    border:1px solid black;
-    margin:300px 30px 20px 30px;
+    max-width: 400px;
     color: white;
-}
-.section-container-floats{
-    height:500px;
-    margin-top: 20px;
-    background-color: white;
-}
+    padding:300px 10px;
+    margin:0 10px;
+}    
 
 .clear-fix::after{
     content:"";
@@ -67,9 +71,16 @@ h2{
     clear:both;
 }
 
+.section-container-floats{
+    height:500px;
+    margin-top: 20px;
+    background-color: white;
+}    
+
 .float-left{
     float: left;
 }
+
 .header-section-container-floats{
     width:100%;
     height: 60px;
@@ -78,47 +89,55 @@ h2{
 
 .lateral-column{
     width: calc(25% - 10px);
-    height: 85%;
-    background-color: rgb(129, 209, 247);
     margin:10px 0;
 }
+
 .central-column{
     width:50%;
-    height: 85%;
-    background-color:rgb(129, 209, 247);;
     margin:10px;
 }
 
 
 .footer-container{
     height:75px;
-    margin-top:20px;
+    margin-top:40px;
     text-align: center;
 }
 
 #img-left-column{
-    height: 40%;
+    height: 140px;
     width: 100%;
-    border:1px solid red;
-    background-image: url(../img/img-1.jpg);
+    border-radius:10px;
+    background-image:
+    linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)),
+    url(../img/img-1.jpg);
     background-size:cover;
     background-position:center;
 }
 
 #img-center-column{
-    height: 40%;
+    height: 140px;
     width: 100%;
-    border:1px solid red;
-    background-image: url(../img/banner-2.jpg);
+    border-radius:10px;
+    background-image:
+    linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)),
+    url(../img/banner-2.jpg);
     background-size:cover;
     background-position:center;
 }
 
 #img-right-column{
-    height: 40%;
+    height: 140px;
     width: 100%;
-    border:1px solid red;
-    background-image: url(../img/img-3.jpg);
+    border-radius:10px;
+    background-image:
+    linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)),
+    url(../img/img-3.jpg);
     background-size:cover;
     background-position:center;
+}
+
+#heart{
+    color:red;
+    font-size:20px;
 }
