--- a/css/style.css
+++ b/css/style.css
@@ -97,44 +97,35 @@ a{
     margin:10px;
 }
 
-
-.footer-container{
-    height:75px;
-    margin-top:40px;
-    text-align: center;
-}
-
-#img-left-column{
+.structure-img-column{
     height: 140px;
     width: 100%;
     border-radius:10px;
+    background-size:cover;
+    background-position:center;
+}
+
+.img-left-column{
     background-image:
     linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)),
     url(../img/img-1.jpg);
-    background-size:cover;
-    background-position:center;
 }
 
-#img-center-column{
-    height: 140px;
-    width: 100%;
-    border-radius:10px;
+.img-center-column{
     background-image:
     linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)),
     url(../img/banner-2.jpg);
-    background-size:cover;
-    background-position:center;
+    
 }
-
-#img-right-column{
-    height: 140px;
-    width: 100%;
-    border-radius:10px;
+.img-right-column{
     background-image:
     linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)),
     url(../img/img-3.jpg);
-    background-size:cover;
-    background-position:center;
+}
+
+.footer-container{
+    height:75px;
+    text-align: center;
 }
 
 #heart{
